update some features
